[gd_scene load_steps=6 format=3 uid="uid://cr87tc0llnrwh"]

[ext_resource type="Material" uid="uid://bfgnnp0tdja1g" path="res://Scenes/PowerUp/PowerUpShieldMaterial.tres" id="1_3hf71"]
[ext_resource type="AudioStream" uid="uid://b8l3hxwciuqy" path="res://Assets/Audio/Effects/Powerup2.mp3" id="1_rbyb8"]
[ext_resource type="Script" uid="uid://dq1t7xd5w7ro0" path="res://Scenes/PowerUp/PowerUp.gd" id="1_v5ap0"]

[sub_resource type="QuadMesh" id="QuadMesh_rbyb8"]
size = Vector2(4, 4)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v5ap0"]
height = 0.76916504
radius = 2.0

[node name="PowerUp" type="Area3D"]
collision_layer = 32
collision_mask = 64
script = ExtResource("1_v5ap0")

[node name="PowerUpMesh" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_3hf71")
mesh = SubResource("QuadMesh_rbyb8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -6.856591e-10, 0.015686035)
shape = SubResource("CylinderShape3D_v5ap0")

[node name="Sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("1_rbyb8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
